--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ flutter:
   assets:
    - images/ic_mine_set.png
    - images/bg_mine_head.png
+   - images/ic_avatar_circle.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
